sumo/tests/traci/VariableRetrieval/VehicleType/errors/UnknownID/testclient_out.traci
TraCITestClient output file. Date: Mon Jul 01 13:26:18 2013


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=165 varID=70 objID=xxx
.. Answered with error to command (165), [description: Vehicle type 'xxx' is not known]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
